[package]
name = "reticulum-packet-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reticulum-packet-rs = {path="../reticulum-packet-rs"}
clap = {version = "4.1.4", features = ["derive"]}
hex = "0.4.3"
